[package]
name = "scwsapi-sys"
version = "0.4.0"
edition.workspace = true

[features]
auto-load-scws = []

[dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde-wasm-bindgen = { workspace = true }
