[package]
name = "scwsapi"
version = "0.8.0"
edition.workspace = true
license.workspace = true

[features]
auto-load-scws = ["scwsapi-sys/auto-load-scws"]

[dependencies]
scwsapi-sys = { workspace = true }
js-sys = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
wasm-bindgen = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
rustls-pki-types = { workspace = true }
sha2 = { workspace = true }
serde-wasm-bindgen = { workspace = true }
